Impliment redux handlebars

--- a/boilerplates/reduxContainers.create.handlebars
+++ b/boilerplates/reduxContainers.create.handlebars
@@ -1,7 +1,7 @@
 import React from 'react';
 import { bindActionCreators } from 'redux'
 import { connect } from 'react-redux';
-import * as {{componentName}}Actions from '../../redux/{{componentName}}/action'
+import * as {{componentName}}Actions from '../../../redux/{{componentName}}/redux'
 
 class {{ComponentName}} extends React.Component {
 
